--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Windows</title>
+    <link rel="icon" type="image/x-icon" href="./static/icon.png">
+    <title>Os-System</title>
     <script src="https://kit.fontawesome.com/f0394882ca.js" crossorigin="anonymous"></script>
   </head>
   <body>
